# commitcraft

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
completions/: commitcraft.bash
demo/: README.md  cinematic-demo.sh  quick-demo.sh  record-cinematic.sh
src/: cli.rs  config.rs  git.rs  lib.rs  main.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
tests/: TESTING.md  integration_tests.rs  unit_tests.rs
